2008-01-02  Tim Retout  <diocles@gnu.org>

	* configure.ac (AC_INIT): Quote arguments.
	(AC_PREREQ): Bump required autoconf version to 2.61.
	(AM_CONFIG_HEADER): Change to AC_CONFIG_HEADERS, quote arguments.
	(AC_STDC_HEADERS): Change to AC_HEADER_STDC, quote arguments.
	(AC_HAVE_HEADERS): Change to AC_CHECK_HEADERS, quote arguments.
	Result of running autoupdate.
	Also tidy order of macros.

	* configure.ac (AC_ISC_POSIX): Replace with AC_USE_SYSTEM_EXTENSIONS
	to silence some aclocal warnings.

	* configure.ac (AC_REVISION): Remove.

	* configure.in: Rename to `configure.ac'.

2008-01-01  Tim Retout  <diocles@gnu.org>

	* configure.in: Remove --with-cc option from configure script.
	Remove test for empty CC from around AC_PROG_CC macro.

	* configure.in (AC_INIT): Change bug report address to
	<bug-enscript@gnu.org>.
	Change package name to `GNU Enscript'.

	* ChangeLog: Run M-x change-log-redate. Add copyright notice at end.

2007-12-29  Tim Retout  <diocles@gnu.org>

	* Makefile.am (SUBDIRS): Remove duplicate intl.

2007-10-31  Tim Retout  <diocles@gnu.org>

	* COPYING: Update to latest revision of GPLv2.
	* all files: Update FSF address in copyright header.

2003-02-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add intl.
	* configure.in (AC_OUTPUT): Add intl/Makefile,

2003-02-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add po/Makefile.in,
	(AM_GNU_GETTEXT_VERSION): Bump to 0.11.5.

1999-07-21  Markku Rossi  <mtr@amme.ssh.fi>

	* README: Added a special note for all US users about the
	enscript's default output media (which is A4 instead of Letter).

1999-01-19  Markku Rossi  <mtr@amme.ssh.fi>

	* Updated automake to version 1.4.

1999-01-14  Markku Rossi  <mtr@amme.ssh.fi>

	* configure.in: Changed autoconf prereq to 2.13.

1999-01-07  Markku Rossi  <mtr@amme.ssh.fi>
